--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^7.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
+    "nodemon": "^2.0.14",
     "uuid": "^8.3.2"
   }
 }
