general users changes

--- a/config/config.json
+++ b/config/config.json
@@ -8,8 +8,8 @@
         "pass": "",
         "db": "puntoventa"
     },
-    "roles":{
-        "rol1": "USER_ROLE",
-        "rol2": "ADMIN_ROLE"
+    "roles": {
+        "rol1": "Usuario",
+        "rol2": "Administrador"
     }
 }
