--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.12.0",
     "google-auth-library": "^7.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.2",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
